[project]
name = "weather-mcp-server"
version = "1.1.0"
description = "A flexible weather MCP server based on NWS API with advanced date parsing capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["weather", "mcp", "nws", "api", "forecast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/weather-mcp-server"
Repository = "https://github.com/yourusername/weather-mcp-server"
Issues = "https://github.com/yourusername/weather-mcp-server/issues"

[project.scripts]
weather-mcp = "weather:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather.py"]
